# shmuelautomation

./: .gitignore  .impeccable.md  DEPLOY.md  README.md  notes.md  phase-1-checklist.md  proposal.md  scope-phase-1.md  scope-phase-2.md  scope-phase-3.md
backend/: .crap.yml  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  setup.cfg
backend/alembic/: env.py
backend/alembic/versions/: 144d719a89f9_groups_table.py  237b1761528b_cloud_connections_photos_oauth_states.py  30787c6f0110_post_slots_table.py  4e9c11a8f3d2_content_translations_table.py  5a7a0cda510b_property_notes_table.py  7e2c4ab1d930_newsletter_subscribers.py  a3f1c9d72b8e_whatsapp_session_and_messages.py  bb70b28a0351_initial_properties_table.py  c4f8a02e1d09_whatsapp_threads_botconfig_summaries.py  ccee99097fbc_contacts_table.py  d5b2e7c1f3a4_schedule_config.py
backend/scripts/: import_prod.sh  import_wp_properties.py  mock_daemon.py  preview_digest.py  run_autopost_demo.py  translate_backfill.py  translate_backfill_simple.py
backend/src/shmuel_backend/: auto_poster.py  chatbot.py  cloud_routes.py  collage.py  collage_service.py  compose.py  config.py  contacts.py  db.py  digest.py  email_client.py  enums.py  excel.py  groups.py  logging_config.py  main.py  models.py  newsletter.py  newsletter_compose.py  properties.py  (+19 more)
backend/tests/: conftest.py  test_auth_middleware.py  test_auto_poster.py  test_bootstrap_script.py  test_chatbot.py  test_cloud_oauth.py  test_cloud_photos.py  test_collage.py  test_compose.py  test_contact_import.py  test_contacts.py  test_deploy_workflow.py  test_digest.py  test_export.py  test_groups.py  test_health.py  test_matching_contacts.py  test_newsletter.py  test_newsletter_preview.py  test_photo_summaries.py  test_post_deploy_check.py  test_properties.py  test_property_bulk.py  test_property_duplicates.py  test_property_notes.py  test_public.py  test_queue.py  test_schedule_config.py  test_scheduler.py  test_summarizer.py  test_system.py  test_threads_routes.py  test_translations.py  test_user_guide.py  test_webot.py  test_whatsapp.py  test_wordpress_plugin.py  test_wp_import.py  test_yad2_import.py
(+118 files in other folders)
