[project]
name = "shmuel-backend"
version = "0.0.1"
description = "Backend for Shmuel Realty automation — property CMS, CRM, publishing engine."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "openpyxl>=3.1",
    "httpx>=0.28",
    "beautifulsoup4>=4.12",
    "cryptography>=44.0",
    "python-multipart>=0.0.18",
    "sentry-sdk[fastapi]>=2.20",
    "pillow>=11.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "ruff>=0.8",
    "aiosqlite>=0.20",
    "pytest-cov>=6.0",
    "mutmut>=3.2",
    # used by tests/test_deploy_workflow.py to parse the GH Actions workflow
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shmuel_backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/shmuel_backend/newsletter_compose.py" = ["E501"]
